<resources>
    <string name="app_name">MonitoredRooms</string>
    <string name="title_activity_monitored_rooms">Monitored Rooms Activity</string> <!-- App Title shown below app icon -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="by_low_temperature">By Lowest Temperature</string>
    <string name="by_high_temperature">By Highest Temperature</string>
    <string name="by_room_name">By Room Name</string>

    <string name="menu_monitored_rooms">Monitored Rooms</string>
    <string name="menu_feature1">Feature 1</string>
    <string name="menu_feature2">Feature 2</string>
    <string name="menu_feature3">Feature 3</string>
    <string name="add_room_button">add room</string>
    <string name="there_are_no_rooms">There are no Rooms...</string>
    <string name="default_choice">default</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acceptable_temperature_range">Acceptable Temperature Range</string>
    <string name="check_every_x_min">Check Every X Min</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="room_name">Room Name</string>
    <string name="lowest_temperature">Lowest Temperature</string>
    <string name="highest_temperature">Highest Temperature</string>
    <string name="save">SAVE</string>
    <string name="occupancy_check_interval">Occupancy Check Interval</string>
    <string name="enter_room_information">Enter Room Information</string>
    <string name="room_info3">room_info3</string>
    <string name="room_info2">room_info2</string>
    <string name="room_info1">room_info1</string>
    <string name="home_overview">Home Overview</string>
    <string name="username">Username</string>
    <string name="other_information">Other Information</string>
    <string name="title_activity_room_profile">Room Profile</string>
</resources>