<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.monitoredrooms.ui.home.MonitoredRoomsFragment"
        android:label="@string/menu_monitored_rooms"
        tools:layout="@layout/fragment_monitored_rooms" />

    <fragment
        android:id="@+id/nav_feature1"
        android:name="com.example.monitoredrooms.ui.feature1.Feature1Fragment"
        android:label="@string/menu_feature1"
        tools:layout="@layout/fragment_feature1" />

    <fragment
        android:id="@+id/nav_feature2"
        android:name="com.example.monitoredrooms.ui.feature2.Feature2Fragment"
        android:label="@string/menu_feature2"
        tools:layout="@layout/fragment_feature2" />
    <fragment
        android:id="@+id/nav_feature3"
        android:name="com.example.monitoredrooms.ui.feature3.Feature3Fragment"
        android:label="@string/menu_feature3"
        tools:layout="@layout/fragment_feature3" />
</navigation>