<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home_overview"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/user_icon_height"
        android:layout_height="@dimen/user_icon_width"
        android:background="@drawable/ic_user_icon_background"
        android:contentDescription="@string/nav_header_desc"
        android:foreground="@drawable/ic_user_icon_foreground"
        android:foregroundGravity="center"
        android:paddingTop="@dimen/nav_header_vertical_spacing" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" /> <!-- modify text -->

    <TextView
        android:id="@+id/registerAuthenticatorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_information" />

    <!-- modify text -->
</LinearLayout>