<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/blue_border_background"
    tools:context=".AddRoomDialog">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/addRoomDialogTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/acceptable_temperature_range"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/addRoomDialogMinTempEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/addRoomDialogIntervalEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:hint="@string/check_every_x_min"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/addRoomDialogSaveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/addRoomDialogMinTempEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="40dp"
            android:ems="5"
            android:hint="@string/min_temp"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/addRoomDialogIntervalTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/addRoomDialogMaxTempEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="40dp"
            android:ems="5"
            android:hint="@string/max_temp"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/addRoomDialogIntervalTextView"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/addRoomDialogRoomNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:hint="@string/room_name"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/addRoomDialogTemperatureTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addRoomDialogSaveButton"
            android:layout_width="132dp"
            android:layout_height="80dp"
            android:layout_marginBottom="40dp"
            android:text="@string/save"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/addRoomDialogIntervalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/occupancy_check_interval"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/addRoomDialogIntervalEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/addRoomDialogTitleToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toTopOf="@+id/addRoomDialogRoomNameEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Enter Room Info" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>